# hse-aiahp

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test.ipynb
app/models/: deepseek.py  jailbreak.py  yandexgptPRO.py
cleanP/: pyproject.toml
data/full_data/: check_correctness.py  score.py
data/full_data/original_data/: merged.xlsx  solutions.xlsx  tasks.xlsx  tests.xlsx
data/full_data/private_gt/: solutions.xlsx  tasks.xlsx  tests.xlsx
data/full_data/public_gt/: solutions.xlsx  tasks.xlsx  tests.xlsx
data/new_data/: data_with_tests_info_test18_10.xlsx
data/new_data/test/: test_solutions_with_flake8.csv
data/other_data/: solutions (2).xlsx  solutions.xlsx  tasks.xlsx  tests.xlsx
data/roma_tests/: test_with_tests.xlsx  train_with_tests.xlsx
data/with_pyright/: test_solutions_with_pyright.csv
jailbreak/: clean_model_answer.ipynb  obscene_lexicon.txt  remove_comments_docstrings.py
linters/: pyright.ipynb
notebooks/: 1. deepseek.ipynb  2. deepseek_yandex.ipynb  dataset_4_YAGPT.ipynb  dataset_for_GPT_testDEEPYA.json  deepseek.ipynb  deepseek_yandex.ipynb  pipeline_yaGPT.ipynb  system_request_pairs.xlsx
notebooks/local_models/: gigachat_pro.ipynb  saiga_llama3_8b.ipynb
notebooks/research/: dataset_4_YAGPT.ipynb  pipeline_yaGPT.ipynb
notebooks/research/cosine_and_tests/: cosine_train_replace.ipynb  cosine_train_replace_tests.ipynb
notebooks/research/linters/: flake8_linter.ipynb
notebooks/research/local_models/: saiga_llama_tuning.ipynb
notebooks/tests/: dataset_4_YAGPT_tests_correction.ipynb
(+1 files in other folders)
